--- a/DefiBotBackend/.env.example
+++ b/DefiBotBackend/.env.example
@@ -1,3 +1,5 @@
 NEXT_PUBLIC_TELEGRAM_BOT_TOKEN=
 NEXT_PUBLIC_APP_URL=
 NEXT_PUBLIC_OPENAI_API_KEY=
+NEXT_PUBLIC_THIRDWEB_CLIENT_ID=
+NEXT_PUBLIC_TELEGRAM_APP_URL=
