--- a/DefiBotBackend/package.json
+++ b/DefiBotBackend/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toggle": "^1.1.0",
     "@tanstack/react-table": "^8.20.5",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
